--- a/notebook/model.training.ipynb
+++ b/notebook/model.training.ipynb
@@ -72,6 +72,8 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "import pandas as pd\n",
     "df=pd.read_csv(\"data/cleaned.csv\")\n",
     "(df.head(2))"
@@ -621,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
